# robotic_arm_simulator

./: .gitignore  README.md  pyproject.toml
scenarios/: 2link_demo.json
src/: requirements.txt
src/arm_sim/: cli.py  fk.py  gui.py  ik.py  planner.py  plot.py  visualize.py
src/robotic_arm_simulator.egg-info/: PKG-INFO  SOURCES.txt
